持续优化参数